# directdnsonly

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.deepseek  Dockerfile.new  Dockerfile.scratch  Pipfile  README.md  app.py  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: app.yml
directdnsonly/: __main__.py  main.py  worker.py
directdnsonly/app/: __init__.py  peer_sync.py  reconciler.py
directdnsonly/app/api/: admin.py  health.py  internal.py  status.py
directdnsonly/app/backends/: __init__.py  base.py  bind.py  nsd.py  powerdns_mysql.py
directdnsonly/app/da/: __init__.py  client.py
directdnsonly/app/db/: __init__.py
directdnsonly/app/db/models/: __init__.py
directdnsonly/app/utils/: __init__.py  zone_parser.py
directdnsonly/config/: __init__.py  app.yml
docker/: entrypoint.sh  named.conf.local  named.conf.options  nsd.conf
src/: db.py  directdnsonly.py  test-file.py  test.py
src/config/: app.yml  app.yml.example
src/lib/common/: __init__.py
src/lib/db/: __init__.py
src/lib/db/models/: __init__.py
tests/: conftest.py  test_admin_api.py  test_da_client.py  test_nsd.py  test_peer_sync.py  test_reconciler.py  test_status_api.py  test_utils.py  test_zone_parser.py
