[project]
name = "directdnsonly"
version = "2.6.1"
description = "DNS Management System - DirectAdmin to multiple backends"
authors = [
    {name = "Aaron Guise",email = "aaron@guise.net.nz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "vyper-config (>=1.2.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "persist-queue (>=1.1.0,<2.0.0)",
    "cherrypy (>=18.10.0,<19.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.32.0,<3.0.0)",
]

[project.scripts]
dadns = "directdnsonly.__main__:run"

[tool.poetry]
package-mode = true

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pyinstaller = "^6.13.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
build_command = ""                  # container release — no sdist/wheel needed
commit_message = "chore: release {version} 🔖"
upload_to_pypi = false
upload_to_vcs_release = true
changelog_file = "CHANGELOG.md"
